--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "discord-player": "^6.7.1",
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.7",
+    "express": "^5.1.0",
     "ffmpeg-static": "^5.2.0",
     "moment": "^2.30.1",
     "ms": "^2.1.3",
